--- a/src/utils/app.less
+++ b/src/utils/app.less
@@ -324,7 +324,68 @@
 	&-if {
 		display: inline-flex;
 	}
+	&-g {
+		display: grid;
+	}
 }
+.grid {
+	&-rows-1 {
+		grid-template-rows: repeat(1, minmax(0, 1fr));
+	}
+	&-rows-2 {
+		grid-template-rows: repeat(2, minmax(0, 1fr));
+	}
+	&-rows-3 {
+		grid-template-rows: repeat(3, minmax(0, 1fr));
+	}
+	&-rows-4 {
+		grid-template-rows: repeat(4, minmax(0, 1fr));
+	}
+	&-rows-5 {
+		grid-template-rows: repeat(5, minmax(0, 1fr));
+	}
+	&-rows-6 {
+		grid-template-rows: repeat(6, minmax(0, 1fr));
+	}
+	&-rows-7 {
+		grid-template-rows: repeat(7, minmax(0, 1fr));
+	}
+	&-rows-8 {
+		grid-template-rows: repeat(8, minmax(0, 1fr));
+	}
+	&-cols-1 {
+		grid-template-columns: repeat(1, minmax(0, 1fr));
+	}
+	&-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+	&-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+	&-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+	&-cols-5 {
+		grid-template-columns: repeat(5, minmax(0, 1fr));
+	}
+	&-cols-6 {
+		grid-template-columns: repeat(6, minmax(0, 1fr));
+	}
+	&-cols-7 {
+		grid-template-columns: repeat(7, minmax(0, 1fr));
+	}
+	&-cols-8 {
+		grid-template-columns: repeat(8, minmax(0, 1fr));
+	}
+}
+.generate-gap(@index) when (@index <= 50) {
+  .gap-@{index} {
+    gap: @index * 1px;
+  }
+  .generate-gap(@index + 1);
+}
+.generate-gap(0);
+
 .flex {
 	&-n {
 		flex: none;
