--- a/src/utils/app.css
+++ b/src/utils/app.css
@@ -122,7 +122,7 @@
   line-height: 10px;
 }
 .c-s {
-  color: #517DAA;
+  color: #517daa;
 }
 .c-0 {
   color: #000;
@@ -192,6 +192,9 @@
 }
 .br-10 {
   border-radius: 10px;
+}
+.br-12 {
+  border-radius: 12px;
 }
 .br-20 {
   border-radius: 20px;
@@ -2874,6 +2877,12 @@
 .b-l {
   border-left: 1rpx solid #eee;
 }
+.b-b-1 {
+  border-bottom: 1px solid #eee;
+}
+.b-r-1 {
+  border-right: 1px solid #eee;
+}
 .o-h {
   overflow: hidden;
 }
@@ -2928,4 +2937,1204 @@
 .ios-pb {
   padding-bottom: constant(safe-area-inset-bottom);
   padding-bottom: env(safe-area-inset-bottom);
+}
+.top-50 {
+  top: 50px;
+}
+.bottom-50 {
+  bottom: 50px;
+}
+.left-50 {
+  left: 50px;
+}
+.right-50 {
+  right: 50px;
+}
+.top-49 {
+  top: 49px;
+}
+.bottom-49 {
+  bottom: 49px;
+}
+.left-49 {
+  left: 49px;
+}
+.right-49 {
+  right: 49px;
+}
+.top-48 {
+  top: 48px;
+}
+.bottom-48 {
+  bottom: 48px;
+}
+.left-48 {
+  left: 48px;
+}
+.right-48 {
+  right: 48px;
+}
+.top-47 {
+  top: 47px;
+}
+.bottom-47 {
+  bottom: 47px;
+}
+.left-47 {
+  left: 47px;
+}
+.right-47 {
+  right: 47px;
+}
+.top-46 {
+  top: 46px;
+}
+.bottom-46 {
+  bottom: 46px;
+}
+.left-46 {
+  left: 46px;
+}
+.right-46 {
+  right: 46px;
+}
+.top-45 {
+  top: 45px;
+}
+.bottom-45 {
+  bottom: 45px;
+}
+.left-45 {
+  left: 45px;
+}
+.right-45 {
+  right: 45px;
+}
+.top-44 {
+  top: 44px;
+}
+.bottom-44 {
+  bottom: 44px;
+}
+.left-44 {
+  left: 44px;
+}
+.right-44 {
+  right: 44px;
+}
+.top-43 {
+  top: 43px;
+}
+.bottom-43 {
+  bottom: 43px;
+}
+.left-43 {
+  left: 43px;
+}
+.right-43 {
+  right: 43px;
+}
+.top-42 {
+  top: 42px;
+}
+.bottom-42 {
+  bottom: 42px;
+}
+.left-42 {
+  left: 42px;
+}
+.right-42 {
+  right: 42px;
+}
+.top-41 {
+  top: 41px;
+}
+.bottom-41 {
+  bottom: 41px;
+}
+.left-41 {
+  left: 41px;
+}
+.right-41 {
+  right: 41px;
+}
+.top-40 {
+  top: 40px;
+}
+.bottom-40 {
+  bottom: 40px;
+}
+.left-40 {
+  left: 40px;
+}
+.right-40 {
+  right: 40px;
+}
+.top-39 {
+  top: 39px;
+}
+.bottom-39 {
+  bottom: 39px;
+}
+.left-39 {
+  left: 39px;
+}
+.right-39 {
+  right: 39px;
+}
+.top-38 {
+  top: 38px;
+}
+.bottom-38 {
+  bottom: 38px;
+}
+.left-38 {
+  left: 38px;
+}
+.right-38 {
+  right: 38px;
+}
+.top-37 {
+  top: 37px;
+}
+.bottom-37 {
+  bottom: 37px;
+}
+.left-37 {
+  left: 37px;
+}
+.right-37 {
+  right: 37px;
+}
+.top-36 {
+  top: 36px;
+}
+.bottom-36 {
+  bottom: 36px;
+}
+.left-36 {
+  left: 36px;
+}
+.right-36 {
+  right: 36px;
+}
+.top-35 {
+  top: 35px;
+}
+.bottom-35 {
+  bottom: 35px;
+}
+.left-35 {
+  left: 35px;
+}
+.right-35 {
+  right: 35px;
+}
+.top-34 {
+  top: 34px;
+}
+.bottom-34 {
+  bottom: 34px;
+}
+.left-34 {
+  left: 34px;
+}
+.right-34 {
+  right: 34px;
+}
+.top-33 {
+  top: 33px;
+}
+.bottom-33 {
+  bottom: 33px;
+}
+.left-33 {
+  left: 33px;
+}
+.right-33 {
+  right: 33px;
+}
+.top-32 {
+  top: 32px;
+}
+.bottom-32 {
+  bottom: 32px;
+}
+.left-32 {
+  left: 32px;
+}
+.right-32 {
+  right: 32px;
+}
+.top-31 {
+  top: 31px;
+}
+.bottom-31 {
+  bottom: 31px;
+}
+.left-31 {
+  left: 31px;
+}
+.right-31 {
+  right: 31px;
+}
+.top-30 {
+  top: 30px;
+}
+.bottom-30 {
+  bottom: 30px;
+}
+.left-30 {
+  left: 30px;
+}
+.right-30 {
+  right: 30px;
+}
+.top-29 {
+  top: 29px;
+}
+.bottom-29 {
+  bottom: 29px;
+}
+.left-29 {
+  left: 29px;
+}
+.right-29 {
+  right: 29px;
+}
+.top-28 {
+  top: 28px;
+}
+.bottom-28 {
+  bottom: 28px;
+}
+.left-28 {
+  left: 28px;
+}
+.right-28 {
+  right: 28px;
+}
+.top-27 {
+  top: 27px;
+}
+.bottom-27 {
+  bottom: 27px;
+}
+.left-27 {
+  left: 27px;
+}
+.right-27 {
+  right: 27px;
+}
+.top-26 {
+  top: 26px;
+}
+.bottom-26 {
+  bottom: 26px;
+}
+.left-26 {
+  left: 26px;
+}
+.right-26 {
+  right: 26px;
+}
+.top-25 {
+  top: 25px;
+}
+.bottom-25 {
+  bottom: 25px;
+}
+.left-25 {
+  left: 25px;
+}
+.right-25 {
+  right: 25px;
+}
+.top-24 {
+  top: 24px;
+}
+.bottom-24 {
+  bottom: 24px;
+}
+.left-24 {
+  left: 24px;
+}
+.right-24 {
+  right: 24px;
+}
+.top-23 {
+  top: 23px;
+}
+.bottom-23 {
+  bottom: 23px;
+}
+.left-23 {
+  left: 23px;
+}
+.right-23 {
+  right: 23px;
+}
+.top-22 {
+  top: 22px;
+}
+.bottom-22 {
+  bottom: 22px;
+}
+.left-22 {
+  left: 22px;
+}
+.right-22 {
+  right: 22px;
+}
+.top-21 {
+  top: 21px;
+}
+.bottom-21 {
+  bottom: 21px;
+}
+.left-21 {
+  left: 21px;
+}
+.right-21 {
+  right: 21px;
+}
+.top-20 {
+  top: 20px;
+}
+.bottom-20 {
+  bottom: 20px;
+}
+.left-20 {
+  left: 20px;
+}
+.right-20 {
+  right: 20px;
+}
+.top-19 {
+  top: 19px;
+}
+.bottom-19 {
+  bottom: 19px;
+}
+.left-19 {
+  left: 19px;
+}
+.right-19 {
+  right: 19px;
+}
+.top-18 {
+  top: 18px;
+}
+.bottom-18 {
+  bottom: 18px;
+}
+.left-18 {
+  left: 18px;
+}
+.right-18 {
+  right: 18px;
+}
+.top-17 {
+  top: 17px;
+}
+.bottom-17 {
+  bottom: 17px;
+}
+.left-17 {
+  left: 17px;
+}
+.right-17 {
+  right: 17px;
+}
+.top-16 {
+  top: 16px;
+}
+.bottom-16 {
+  bottom: 16px;
+}
+.left-16 {
+  left: 16px;
+}
+.right-16 {
+  right: 16px;
+}
+.top-15 {
+  top: 15px;
+}
+.bottom-15 {
+  bottom: 15px;
+}
+.left-15 {
+  left: 15px;
+}
+.right-15 {
+  right: 15px;
+}
+.top-14 {
+  top: 14px;
+}
+.bottom-14 {
+  bottom: 14px;
+}
+.left-14 {
+  left: 14px;
+}
+.right-14 {
+  right: 14px;
+}
+.top-13 {
+  top: 13px;
+}
+.bottom-13 {
+  bottom: 13px;
+}
+.left-13 {
+  left: 13px;
+}
+.right-13 {
+  right: 13px;
+}
+.top-12 {
+  top: 12px;
+}
+.bottom-12 {
+  bottom: 12px;
+}
+.left-12 {
+  left: 12px;
+}
+.right-12 {
+  right: 12px;
+}
+.top-11 {
+  top: 11px;
+}
+.bottom-11 {
+  bottom: 11px;
+}
+.left-11 {
+  left: 11px;
+}
+.right-11 {
+  right: 11px;
+}
+.top-10 {
+  top: 10px;
+}
+.bottom-10 {
+  bottom: 10px;
+}
+.left-10 {
+  left: 10px;
+}
+.right-10 {
+  right: 10px;
+}
+.top-9 {
+  top: 9px;
+}
+.bottom-9 {
+  bottom: 9px;
+}
+.left-9 {
+  left: 9px;
+}
+.right-9 {
+  right: 9px;
+}
+.top-8 {
+  top: 8px;
+}
+.bottom-8 {
+  bottom: 8px;
+}
+.left-8 {
+  left: 8px;
+}
+.right-8 {
+  right: 8px;
+}
+.top-7 {
+  top: 7px;
+}
+.bottom-7 {
+  bottom: 7px;
+}
+.left-7 {
+  left: 7px;
+}
+.right-7 {
+  right: 7px;
+}
+.top-6 {
+  top: 6px;
+}
+.bottom-6 {
+  bottom: 6px;
+}
+.left-6 {
+  left: 6px;
+}
+.right-6 {
+  right: 6px;
+}
+.top-5 {
+  top: 5px;
+}
+.bottom-5 {
+  bottom: 5px;
+}
+.left-5 {
+  left: 5px;
+}
+.right-5 {
+  right: 5px;
+}
+.top-4 {
+  top: 4px;
+}
+.bottom-4 {
+  bottom: 4px;
+}
+.left-4 {
+  left: 4px;
+}
+.right-4 {
+  right: 4px;
+}
+.top-3 {
+  top: 3px;
+}
+.bottom-3 {
+  bottom: 3px;
+}
+.left-3 {
+  left: 3px;
+}
+.right-3 {
+  right: 3px;
+}
+.top-2 {
+  top: 2px;
+}
+.bottom-2 {
+  bottom: 2px;
+}
+.left-2 {
+  left: 2px;
+}
+.right-2 {
+  right: 2px;
+}
+.top-1 {
+  top: 1px;
+}
+.bottom-1 {
+  bottom: 1px;
+}
+.left-1 {
+  left: 1px;
+}
+.right-1 {
+  right: 1px;
+}
+.w-100 {
+  width: 100px;
+}
+.h-100 {
+  height: 100px;
+}
+.w-99 {
+  width: 99px;
+}
+.h-99 {
+  height: 99px;
+}
+.w-98 {
+  width: 98px;
+}
+.h-98 {
+  height: 98px;
+}
+.w-97 {
+  width: 97px;
+}
+.h-97 {
+  height: 97px;
+}
+.w-96 {
+  width: 96px;
+}
+.h-96 {
+  height: 96px;
+}
+.w-95 {
+  width: 95px;
+}
+.h-95 {
+  height: 95px;
+}
+.w-94 {
+  width: 94px;
+}
+.h-94 {
+  height: 94px;
+}
+.w-93 {
+  width: 93px;
+}
+.h-93 {
+  height: 93px;
+}
+.w-92 {
+  width: 92px;
+}
+.h-92 {
+  height: 92px;
+}
+.w-91 {
+  width: 91px;
+}
+.h-91 {
+  height: 91px;
+}
+.w-90 {
+  width: 90px;
+}
+.h-90 {
+  height: 90px;
+}
+.w-89 {
+  width: 89px;
+}
+.h-89 {
+  height: 89px;
+}
+.w-88 {
+  width: 88px;
+}
+.h-88 {
+  height: 88px;
+}
+.w-87 {
+  width: 87px;
+}
+.h-87 {
+  height: 87px;
+}
+.w-86 {
+  width: 86px;
+}
+.h-86 {
+  height: 86px;
+}
+.w-85 {
+  width: 85px;
+}
+.h-85 {
+  height: 85px;
+}
+.w-84 {
+  width: 84px;
+}
+.h-84 {
+  height: 84px;
+}
+.w-83 {
+  width: 83px;
+}
+.h-83 {
+  height: 83px;
+}
+.w-82 {
+  width: 82px;
+}
+.h-82 {
+  height: 82px;
+}
+.w-81 {
+  width: 81px;
+}
+.h-81 {
+  height: 81px;
+}
+.w-80 {
+  width: 80px;
+}
+.h-80 {
+  height: 80px;
+}
+.w-79 {
+  width: 79px;
+}
+.h-79 {
+  height: 79px;
+}
+.w-78 {
+  width: 78px;
+}
+.h-78 {
+  height: 78px;
+}
+.w-77 {
+  width: 77px;
+}
+.h-77 {
+  height: 77px;
+}
+.w-76 {
+  width: 76px;
+}
+.h-76 {
+  height: 76px;
+}
+.w-75 {
+  width: 75px;
+}
+.h-75 {
+  height: 75px;
+}
+.w-74 {
+  width: 74px;
+}
+.h-74 {
+  height: 74px;
+}
+.w-73 {
+  width: 73px;
+}
+.h-73 {
+  height: 73px;
+}
+.w-72 {
+  width: 72px;
+}
+.h-72 {
+  height: 72px;
+}
+.w-71 {
+  width: 71px;
+}
+.h-71 {
+  height: 71px;
+}
+.w-70 {
+  width: 70px;
+}
+.h-70 {
+  height: 70px;
+}
+.w-69 {
+  width: 69px;
+}
+.h-69 {
+  height: 69px;
+}
+.w-68 {
+  width: 68px;
+}
+.h-68 {
+  height: 68px;
+}
+.w-67 {
+  width: 67px;
+}
+.h-67 {
+  height: 67px;
+}
+.w-66 {
+  width: 66px;
+}
+.h-66 {
+  height: 66px;
+}
+.w-65 {
+  width: 65px;
+}
+.h-65 {
+  height: 65px;
+}
+.w-64 {
+  width: 64px;
+}
+.h-64 {
+  height: 64px;
+}
+.w-63 {
+  width: 63px;
+}
+.h-63 {
+  height: 63px;
+}
+.w-62 {
+  width: 62px;
+}
+.h-62 {
+  height: 62px;
+}
+.w-61 {
+  width: 61px;
+}
+.h-61 {
+  height: 61px;
+}
+.w-60 {
+  width: 60px;
+}
+.h-60 {
+  height: 60px;
+}
+.w-59 {
+  width: 59px;
+}
+.h-59 {
+  height: 59px;
+}
+.w-58 {
+  width: 58px;
+}
+.h-58 {
+  height: 58px;
+}
+.w-57 {
+  width: 57px;
+}
+.h-57 {
+  height: 57px;
+}
+.w-56 {
+  width: 56px;
+}
+.h-56 {
+  height: 56px;
+}
+.w-55 {
+  width: 55px;
+}
+.h-55 {
+  height: 55px;
+}
+.w-54 {
+  width: 54px;
+}
+.h-54 {
+  height: 54px;
+}
+.w-53 {
+  width: 53px;
+}
+.h-53 {
+  height: 53px;
+}
+.w-52 {
+  width: 52px;
+}
+.h-52 {
+  height: 52px;
+}
+.w-51 {
+  width: 51px;
+}
+.h-51 {
+  height: 51px;
+}
+.w-50 {
+  width: 50px;
+}
+.h-50 {
+  height: 50px;
+}
+.w-49 {
+  width: 49px;
+}
+.h-49 {
+  height: 49px;
+}
+.w-48 {
+  width: 48px;
+}
+.h-48 {
+  height: 48px;
+}
+.w-47 {
+  width: 47px;
+}
+.h-47 {
+  height: 47px;
+}
+.w-46 {
+  width: 46px;
+}
+.h-46 {
+  height: 46px;
+}
+.w-45 {
+  width: 45px;
+}
+.h-45 {
+  height: 45px;
+}
+.w-44 {
+  width: 44px;
+}
+.h-44 {
+  height: 44px;
+}
+.w-43 {
+  width: 43px;
+}
+.h-43 {
+  height: 43px;
+}
+.w-42 {
+  width: 42px;
+}
+.h-42 {
+  height: 42px;
+}
+.w-41 {
+  width: 41px;
+}
+.h-41 {
+  height: 41px;
+}
+.w-40 {
+  width: 40px;
+}
+.h-40 {
+  height: 40px;
+}
+.w-39 {
+  width: 39px;
+}
+.h-39 {
+  height: 39px;
+}
+.w-38 {
+  width: 38px;
+}
+.h-38 {
+  height: 38px;
+}
+.w-37 {
+  width: 37px;
+}
+.h-37 {
+  height: 37px;
+}
+.w-36 {
+  width: 36px;
+}
+.h-36 {
+  height: 36px;
+}
+.w-35 {
+  width: 35px;
+}
+.h-35 {
+  height: 35px;
+}
+.w-34 {
+  width: 34px;
+}
+.h-34 {
+  height: 34px;
+}
+.w-33 {
+  width: 33px;
+}
+.h-33 {
+  height: 33px;
+}
+.w-32 {
+  width: 32px;
+}
+.h-32 {
+  height: 32px;
+}
+.w-31 {
+  width: 31px;
+}
+.h-31 {
+  height: 31px;
+}
+.w-30 {
+  width: 30px;
+}
+.h-30 {
+  height: 30px;
+}
+.w-29 {
+  width: 29px;
+}
+.h-29 {
+  height: 29px;
+}
+.w-28 {
+  width: 28px;
+}
+.h-28 {
+  height: 28px;
+}
+.w-27 {
+  width: 27px;
+}
+.h-27 {
+  height: 27px;
+}
+.w-26 {
+  width: 26px;
+}
+.h-26 {
+  height: 26px;
+}
+.w-25 {
+  width: 25px;
+}
+.h-25 {
+  height: 25px;
+}
+.w-24 {
+  width: 24px;
+}
+.h-24 {
+  height: 24px;
+}
+.w-23 {
+  width: 23px;
+}
+.h-23 {
+  height: 23px;
+}
+.w-22 {
+  width: 22px;
+}
+.h-22 {
+  height: 22px;
+}
+.w-21 {
+  width: 21px;
+}
+.h-21 {
+  height: 21px;
+}
+.w-20 {
+  width: 20px;
+}
+.h-20 {
+  height: 20px;
+}
+.w-19 {
+  width: 19px;
+}
+.h-19 {
+  height: 19px;
+}
+.w-18 {
+  width: 18px;
+}
+.h-18 {
+  height: 18px;
+}
+.w-17 {
+  width: 17px;
+}
+.h-17 {
+  height: 17px;
+}
+.w-16 {
+  width: 16px;
+}
+.h-16 {
+  height: 16px;
+}
+.w-15 {
+  width: 15px;
+}
+.h-15 {
+  height: 15px;
+}
+.w-14 {
+  width: 14px;
+}
+.h-14 {
+  height: 14px;
+}
+.w-13 {
+  width: 13px;
+}
+.h-13 {
+  height: 13px;
+}
+.w-12 {
+  width: 12px;
+}
+.h-12 {
+  height: 12px;
+}
+.w-11 {
+  width: 11px;
+}
+.h-11 {
+  height: 11px;
+}
+.w-10 {
+  width: 10px;
+}
+.h-10 {
+  height: 10px;
+}
+.w-9 {
+  width: 9px;
+}
+.h-9 {
+  height: 9px;
+}
+.w-8 {
+  width: 8px;
+}
+.h-8 {
+  height: 8px;
+}
+.w-7 {
+  width: 7px;
+}
+.h-7 {
+  height: 7px;
+}
+.w-6 {
+  width: 6px;
+}
+.h-6 {
+  height: 6px;
+}
+.w-5 {
+  width: 5px;
+}
+.h-5 {
+  height: 5px;
+}
+.w-4 {
+  width: 4px;
+}
+.h-4 {
+  height: 4px;
+}
+.w-3 {
+  width: 3px;
+}
+.h-3 {
+  height: 3px;
+}
+.w-2 {
+  width: 2px;
+}
+.h-2 {
+  height: 2px;
+}
+.w-1 {
+  width: 1px;
+}
+.h-1 {
+  height: 1px;
 }
