--- a/src/utils/app.less
+++ b/src/utils/app.less
@@ -568,7 +568,7 @@
 }
 
 @position-range: 50;
-.position(@index) when (@index > 0) {
+.position(@index) when (@index >= 0) {
 	.top-@{index} {
 		top: @index * 1px;
 	}
